prep for version 1.0: chg README from md to adoc; mv document-attributes.adoc from templates to docs/shared; add version history and other changes to README

--- a/docs/shared/attributes.adoc
+++ b/docs/shared/attributes.adoc
@@ -32,3 +32,10 @@
 :MyTitleAUpstreamBookName: My Title A (Upstream)
 :MyTitleBUpstreamBookName: My Title B (Upstream)
 :MyTitleCUpstreamBookName: My Title C (Upstream)
+
+
+
+
+// -- TOOLING METADATA: DO NOT CHANGE ANYTHING BELOW THIS LINE! --
+:RepoTemplateVersion: 1.0
+:RepoTemplateCodeName: multi-topic-level
