--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
-# Documentation Repository
+include::topics/shared/attributes.adoc[]
 
-WARNING: as of 18 August 2016, this template repo is still under heavy development! Email <dhensley@redhat.com> if you're interested in using it!
+# Documentation Repository
 
 The multi-topic-level-repo-template is a Git repository template for multiple titles in a single repo that Silas and the Customer Platform team collaborate on in order to provide a flexible Git repository structure that works with the Docs2Drupal publication system, is topic-oriented, enables simple upstream-downstream collaboration, and in the future can allow for cross-repo content-sharing. The multi-topic-level-repo-template has the following properties:
 
@@ -20,11 +20,12 @@ You can review the [repository structure](#repository-structure), and [use this 
 This repository contains all of the documentation for XYZ product name. It uses the following directory structure:
 
 ~~~
+├── README.md
 ├── docs
 │   ├── My_Title_A
 │   │   ├── enterprise
-│   │   │   ├── master.adoc
 │   │   │   ├── master-docinfo.xml
+│   │   │   ├── master.adoc
 │   │   │   └── topics -> ../topics
 │   │   ├── topics
 │   │   │   ├── shared -> ../../shared
@@ -35,14 +36,14 @@ This repository contains all of the documentation for XYZ product name. It uses 
 │   │   │   ├── topic-6.adoc
 │   │   │   └── topic-7.adoc
 │   │   └── upstream_1
-│   │       ├── master.adoc
 │   │       ├── master-docinfo.xml
+│   │       ├── master.adoc
 │   │       ├── master.html
 │   │       └── topics -> ../topics
 │   ├── My_Title_B
 │   │   ├── enterprise
-│   │   │   ├── master.adoc
 │   │   │   ├── master-docinfo.xml
+│   │   │   ├── master.adoc
 │   │   │   └── topics -> ../topics
 │   │   ├── topics
 │   │   │   ├── shared -> ../../shared
@@ -53,26 +54,28 @@ This repository contains all of the documentation for XYZ product name. It uses 
 │   │   │   ├── topic-6.adoc
 │   │   │   └── topic-7.adoc
 │   │   └── upstream_1
-│   │       ├── master.adoc
 │   │       ├── master-docinfo.xml
+│   │       ├── master.adoc
 │   │       ├── master.html
 │   │       └── topics -> ../topics
 │   └── shared
-│       ├── images — This folder contains all imagess
+│       ├── attributes.adoc
+│       ├── images
 │       ├── templates
-│       │   ├── document-attributes.adoc
 │       │   └── revision-info.adoc
 │       ├── topic-shared-1.adoc
 │       └── topic-shared-2.adoc
-├── README.md
-└── scripts — Contains scripts to automate the processes used to create and build documentation
-    └── buildGuides.sh — Builds the top-level Guides that live in the docs/ folders
+└── resources
+    ├── asciidoc-writing-guide.adoc
+    └── scripts
+        └── buildGuides.sh
 ~~~
 
 ## Use this Repository Template
 
 Clone this repository to your local machine. You may want to build the books in this example repository and review the output to understand how it works before you make any changes.
 
+//// Fix buildGuides.sh to work with multi-topic-level and re-include this info
 ### Build the Example Books
 
 To build all of the example books, open a terminal, navigate to the root directory of this repository, and type the following command:
@@ -90,7 +93,7 @@ You can also build a single guide. Navigate to the folder of the book you want t
 Copy the structure into your own local repository and make the following changes to customize this template for your implementation.
 
 1. Add your Asciidoc `*.adoc` files to the `topics/` folder.
-2. Replace the values in the `docs/topics/document-attributes.adoc` file for your documentation.
+2. Replace the values in the `docs/shared/attributes.adoc` file for your documentation.
   * Replace the product names and releases.
   * Replace the book names.
 3. Use 'git mv' to rename the book folder names.
@@ -103,3 +106,16 @@ Copy the structure into your own local repository and make the following changes
 5. Within each book folder, modify the `master-docinfo.xml` file to set the appropriate title, product, release, and other values for the build of the book to the portal.
 6. Within each book folder, modify the `master.adoc` file to set the appropriate title, document attributes, and include the appropriate `topics/` content.
 7. When you are ready, run the scripts to build the guides and review the output to make sure it looks correct.
+////
+
+### {$RepoTemplateCodeName} Revision History
+
+1.0::
+  * `docs/shared/templates/document-attributes.adoc` moved to `docs/shared/attributes.adoc`
+  * all includes of `document-attributes.adoc` fixed
+  * RepoTemplateVersion and RepoTemplateCodeName attributes defined in `docs/shared/attributes.adoc`
+Pre-1.0::
+	* contains typo in repository structure diagram: "images — This folder contains all imagess"
+	* `buildGuides.sh` (98 lines, 86 sloc) does not work correctly because it had not been updated from the script developed by EAP
+
+
