--- a/README.adoc
+++ b/README.adoc
@@ -1,23 +1,27 @@
 include::topics/shared/attributes.adoc[]
 
-# Documentation Repository
+# {RepoTemplateCodeName}  version {RepoTemplateVersion} Documentation Git Repository
 
-The multi-topic-level-repo-template is a Git repository template for multiple titles in a single repo that Silas and the Customer Platform team collaborate on in order to provide a flexible Git repository structure that works with the Docs2Drupal publication system, is topic-oriented, enables simple upstream-downstream collaboration, and in the future can allow for cross-repo content-sharing. The multi-topic-level-repo-template has the following properties:
+This is a fully-customizable Git repository that can be quickly and easily cloned to begin new documentation projects, or migrate old documentation projects into the repository structure that Content Services is converging on as part of its FY17 goals. 
 
-* multiple titles in a single repository
-* the repo structure makes it clear whether a topic is local to the specific distro of a title, shared between distros of a title, or shared between more than one titles
-* because of the repo structure with different levels of topic-sharing, the need for file naming conventions is reduced
-* it will work with a Github-first development model
-* it should work with all other documentation development models
-* it can easily be mirrored between Github and Gitlab using a script
-* in the future, Silas and the Customer Platform team will be testing cross-repo content-sharing using this repo templates
+This repository structure has the following properties:
 
+* It is verified to work with the Tooling team's Docs2Drupal and Docs 2.0 publication systems.
+* It is based on the "library," or "multi-title" repo model, meaning that one or more titles are located in a single Git repository. This repository structure can work with any number of titles, from one to whatever.
+* The repository structure serves to make it clear which content—usually toics—is/are shared between different distributions ("distros") of a title, shared between more that one title, or potentially local to a single distro of a title.
+* The need to use file-naming conventions to signify levels of sharing (a.k.a. "Hungarian notation") is reduced due to the directory structure making it more explicit.
+* It can be mirrored between Github and Gitlab by the Tooling team.
+* Content from other repositories can be pulled into this one using the Git subtree (or Git submodels if absolutely necessary).
+* This repository structure has been structured so that it works with discrete chunks of content included from the `topics` and `topics/shared` subdirectories of each title. That is, it is based on, and will work best with, a _topic-oriented_ content development model.
 
-You can review the [repository structure](#repository-structure), and [use this repository template](#use-this-repository-template) as a starting point for your project.
+In addition, this repository structure has been designed to work with the following content development models:
+
+* All content development is performed in the Github repository, for any number of titles and distros, provided that release versions are more-or-less in sync between those distros. The Github repository is mirrored to Gitlab solely in order to publish using the Docs2Drupal/Docs 2.0 toolchain (i.e. Pantheon).
+* Upstream content development  (by engineering, community members, etc.), for any number of titles and distros, happens in Github. Downstream development (by CCS, engineering), for any number of titles and distros, happens in Gitlab.
+* All content development for any number of titles and distros happens in Gitlab.
+* This repository structure is extremely flexible and should be able to account for any other development models. Contact mailto:dhensley@redhat.com[Silas] if you have any questions about whether this repository structure can work for your project.
 
 ## Repository Structure Overview
-
-This repository contains all of the documentation for XYZ product name. It uses the following directory structure:
 
 ~~~
 ├── README.md
