--- a/README.adoc
+++ b/README.adoc
@@ -6,14 +6,33 @@
 :RepoTemplateVersion: 1.0
 :RepoTemplateCodeName: multi-topic-level
 
-# {RepoTemplateCodeName}  version {RepoTemplateVersion} Template Git Repository
+= {RepoTemplateCodeName}  version {RepoTemplateVersion} Template Git Repository
 
 This is a fully-customizable Git repository that can be quickly and easily cloned to begin new documentation projects, or migrate old documentation projects into the repository structure that Content Services is converging on as part of its FY17 goals. 
 
+== Terminology
+
+This template repository uses the terms below as defined:
+
+title::
+  a _title_ is a _deliverable_, i.e. a piece of content that is publishable using our toolchain. The toolchain refers to an AsciiDoc or DocBook deliverable publishable with it as a _title_, and this repo template adopts the same terminology.
+  FIXME: note that title is also the name of a top-level directory that contains deliverables, each of which is defined by a master.adoc file in <titles>/<title>/<distro> subdirectories, provided the name change from docs -> title happens.
+distro::
+		a _distro_, which is shorthand for "distribution", is similar to the concept of a Linux distro or distribution, which is a customized "spin" of Linux. A _distro_ for our purposes is a certain set of docs that is released under a certain product or project name. FIXME: add example, etc.
+topic::
+		FIXME: add description
+shared::
+  FIXME: add description
+		
+== Properties of *{RepoTemplateCodeName} *
+
+This template repository structure has the following properties:
+
 This repository structure has the following properties:
 
-* It is verified to work with the Tooling team's Docs2Drupal and Docs 2.0 publication systems.
-* It is based on the "library," or "multi-title" repo model, meaning that one or more titles are located in a single Git repository. This repository structure can work with any number of titles, from one to whatever.
+* It is verified to work with the Tooling team's Docs2Drupal (and soon Docs 2.0) publication systems.
+//* It is verified that repositories in this format can be localized without issues.
+* It is based on the "library," or "multi-title" repo model. This repository structure can work with any number of titles, from one to whatever.
 * The repository structure serves to make it clear which content—usually toics—is/are shared between different distributions ("distros") of a title, shared between more that one title, or potentially local to a single distro of a title.
 * The need to use file-naming conventions to signify levels of sharing (a.k.a. "Hungarian notation") is reduced due to the directory structure making it more explicit.
 * It can be mirrored between Github and Gitlab by the Tooling team.
@@ -27,7 +46,7 @@ In addition, this repository structure has been designed to work with the follow
 * All content development for any number of titles and distros happens in Gitlab.
 * This repository structure is extremely flexible and should be able to account for any other development models. Contact mailto:dhensley@redhat.com[Silas] if you have any questions about whether this repository structure can work for your project.
 
-## Repository Structure Overview
+== Repository Structure Overview
 
 ----
 ├── README.adoc
@@ -74,7 +93,7 @@ In addition, this repository structure has been designed to work with the follow
     └── scripts
         └── buildGuides.sh
 ----
-## How to Use This Repository Template
+== How to Use This Repository Template
 
 1. Clone this repository:
 
@@ -98,11 +117,14 @@ Important: in most circumstances, deleting a .git directory is a really bad idea
 5. Remove any directories for distros that you have not customized for your project:
 		* Under `docs/`, delete the directories for any titles that you do not require, such as `my-title-b` if you do not have a second title. This helps to avoid confusion. Note that these template directories can always be copied from this repository in the future, if needed.
   * Under `docs/_<titles>_/`, delete the directories for any distros that you do not require, such as `upstream-1` if you do not have an upstream. This helps to avoid confusion. Note that these template directories can always be copied from this repository in the future, if needed.
-  
     
 6. If you are migrating existing content to this repository template, it is recommended to put all content into the `topics` directories for the appropriate titles, even if the content *is not* shared between distros. (There are more reasons for putting content that isn't shared between distros of a title or multiple titles into the `_<title>_/topics` directory, at least at first, but they are beyond the scope of this README. For a discussion of the reasoning, which touches on content development workflow, contact mailto:dhensley@redhat.com[Silas].)
 
-7. Remove this README.adoc file, or overwrite it with the details for your project! 
+7. Remove this README.adoc file, or overwrite it with the details for your project! Do not leave this README as-is for your project!
+
+8. TBD: Full instructions should be provided for hooking this repository up to Pantheon. In short:
+  * You must set the Content Directory for each book to <docs>/<title>
+  * 
 
 //// 
 Fix buildGuides.sh to work with multi-topic-level and re-include this info
