Comment out include of (document-)attributes.adoc that original in eap-documentation repo contains

--- a/resources/asciidoc-writing-guide.adoc
+++ b/resources/asciidoc-writing-guide.adoc
@@ -1,6 +1,6 @@
 :imagesdir: images
 
-include::../docs/shared/attributes.adoc[]
+// include::../docs/shared/attributes.adoc[]
 
 [[jboss_eap_asciidoc_writing_guide]]
 = AsciiDoc Guide [static copy of the EAP AsciiDoc Writing Guide]
