minor README fixes

--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@
 
 = {RepoTemplateCodeName}  version {RepoTemplateVersion} Template Git Repository
 
-This is a fully-customizable Git repository that can be quickly and easily cloned to begin new documentation projects, or migrate old documentation projects into the repository structure that Content Services is converging on as part of its FY17 goals. 
+This is a fully-customizable Git repository that can be quickly and easily cloned to begin new documentation projects, or migrate old documentation projects into the repository structure that Content Services is converging on as part of our FY17 goals. 
 
 == Terminology
 
@@ -162,7 +162,7 @@ Copy the structure into your own local repository and make the following changes
 ### {RepoTemplateCodeName} Revision History
 
 1.0::
-  * rename `My_Title_A`, `My_Title_B` and `Upstream_1` directories to `my-title-a`, `my-title-b` and `upstream-1` naming patterns to make navigating the Git repo as fast as possible. Thank you, jross, for making the suggestion!
+  * rename `My_Title_A`, `My_Title_B` and `Upstream_1` directories to `my-title-a`, `my-title-b` and `upstream-1` naming patterns to make navigating the Git repo as fast as possible.
   * `docs/shared/templates/document-attributes.adoc` moved to `docs/shared/attributes.adoc`.
   * all includes of `document-attributes.adoc` changed to correct for new attributes.adoc location.
   * `scripts/buildGuides.sh` moved to `resources/scripts/buildGuides.sh`.
