Fix imagesdir to correctly be docs/shared/images

--- a/docs/shared/attributes.adoc
+++ b/docs/shared/attributes.adoc
@@ -4,7 +4,7 @@
 :toc:
 :toclevels: 4
 :numbered:
-:imagesdir: topics/images
+:imagesdir: topics/shared/images
 //
 // Product content attributes
 //
