--- a/docs/shared/topic-shared-2.adoc
+++ b/docs/shared/topic-shared-2.adoc
@@ -5,27 +5,27 @@ This topic shows how to use conditional preprocessor directives to control the c
 
 == Display Content Dependent on a Specific Book
 
-`Topic 2` is included only in _{MyTitleABookName}_, so you have to refer to it differently if you are within the book than when it is included in a different book.
+`Topic 2` is included only in _{ProductName}_, so you have to refer to it differently if you are within the book than when it is included in a different book.
 
-* When the shared topic is buil5 for _{MyTitleABookName}_, it displays an `xref:` to that topic.
-* If it is rendered for a different book, it just provides text directing them to the topic in _{MyTitleABookName}_.
+* When the shared topic is buil5 for _{ProductName}_, it displays an `xref:` to that topic.
+* If it is rendered for a different book, it just provides text directing them to the topic in _{ProductName}_.
 
 The following content renders differently depending on the book:
 
 // Use an xref: when referring to a topic or section within the same book
 ifdef::my-title-a[]
-//* Since this topic is in book _{MyTitleABookName}_, see xref:topic-shared-1[Topic Shared 1] in this book.
+//* Since this topic is in book _{ProductName}_, see xref:topic-shared-1[Topic Shared 1] in this book.
 TODO: improve this text and make it more exemplary of...something.
 endif::[]
 
 // Use text or an external link when referring to a topic or section not defined within the book
 ifndef::my-title-a[]
-* For more information, see _Topic 2_ in book _{MyTitleABookName}_.
+* For more information, see _Topic 2_ in book _{ProductName}_.
 endif::[]
 
-// Add text only for MyTitleABookName
+// Add text only for ProductName
 ifdef::my-title-a[]
-* This is content only for book _{MyTitleABookName}_.
+* This is content only for book _{ProductName}_.
 endif::[]
 
 // Add text only for MyTitleBBookName
