--- a/docs/shared/attributes.adoc
+++ b/docs/shared/attributes.adoc
@@ -8,18 +8,15 @@
 //
 // Product content attributes
 //
-:ProductName: Red Hat Mobile Application Platform
-:ProductShortName: RHMAP
-
-//***NEW START***
-:UpstreamProductName: FeedHenry
-:WFMNameLong: Workflow Management
-:WFMNameShort: WFM
-:RCNameLong: RainCatcher
-//***NEW END***
-
+:ProductName: FeedHenry
+:ProductShortName: FeedHenry
 :ProductRelease: 1
 :ProductVersion: 1.0
+
+//***NEW START***
+:WFM-RC-NameLong: RainCatcher
+:WFM-RC-NameShort: RainCatcher
+//***NEW END***
 
 // Component Names
 :ComponentName:
@@ -37,12 +34,6 @@
 //     book name if necessary. 
 //     Using the pattern ending in 'BookName' makes it easy to grep for occurrences 
 //     throughout the topics 
-
-//***NEW***RHMAP docs
-:MyTitleABookName: Workflow Management Framework
-
-//***NEW***Upstream-1 docs
-:MyTitleUpstreamBookName: RainCatcher Framework
 
 // -- TOOLING METADATA: DO NOT CHANGE ANYTHING BELOW THIS LINE! --
 :RepoTemplateVersion: 0.9
