--- a/docs/workforce-management-framework/upstream-1/master.adoc
+++ b/docs/workforce-management-framework/upstream-1/master.adoc
@@ -1,35 +1,29 @@
 include::topics/shared/attributes.adoc[]
 
-:workflow-management-framework:
-:product-build:
-
-= {MyTitleUpstreamBookName}
+= {WFM-RC-NameLong}
 
 [[introducing-raincatcher]]
-== Introducing {RCNameLong}
-include::topics/topic-2.adoc[leveloffset=+2]
+== Introducing {WFM-RC-NameLong}
+include::introducing-the-features-of-raincatcher.adoc[leveloffset=+2]
 
 [[preparing-the-local-development-environment]]
 == Preparing the Local Development Environment
-include::topics/shared/topic-shared-1.adoc[leveloffset=+2]
 
 [[getting-started-with-raincatcher]]
-== Getting Started with {RCNameLong}
+== Getting Started with {WFM-RC-NameShort}
 
 [[programming-a-raincatcher-project]]
-== Programming a {RCNameLong} Project
+== Programming a {WFM-RC-NameShort} Project
+include::using-wfm-logger-and-setting-a-logging-level.adoc[leveloffset=+2]
 
 [[testing-a-raincatcher-project]]
-== Testing a {RCNameLong} Project
+== Testing a {WFM-RC-NameShort} Project
 
 [[troubleshooting-a-raincatcher-project]]
-== Troubleshooting a {RCNameLong} Project
+== Troubleshooting a {WFM-RC-NameShort} Project
 
-[[wfm-modules-reference]]
-== {RCNameLong} Modules Reference
-
-[appendix]
-== Reference Material
+[[raincatcher-modules-reference]]
+== {WFM-RC-NameShort} Modules Reference
 
 // **********************************
 // * Appendix: Revision Information *
